# DexterousManipulation

./: CMakeLists.txt  README.md
fem/: CMakeLists.txt  Tensor3333.cpp  Tensor3333.h  World.cpp  World.h  fem.h
fem/Constraint/: AttachmentCst.cpp  AttachmentCst.h  BarycentricAttachmentCst.cpp  BarycentricAttachmentCst.h  Constraint.h  CorotateFEMCst.cpp  CorotateFEMCst.h  Cst.h  LinearMuscleCst.cpp  LinearMuscleCst.h
fem/Mesh/: DiamondMesh.cpp  DiamondMesh.h  Mesh.h  OBJMesh.cpp  OBJMesh.h  RectangularMesh.cpp  RectangularMesh.h
render/: Camera.cpp  Camera.h  DART_interface.cpp  DART_interface.h  FEM_interface.cpp  FEM_interface.h  GLUTWindow.cpp  GLUTWindow.h  GLfunctions.cpp  GLfunctions.h  SimWindow.cpp  SimWindow.h  main.cpp
vmcon/: Ball.cpp  Ball.h  BezierCurve.h  DART_helper.cpp  DART_helper.h  FSM.cpp  FSM.h  HLC.cpp  HLC.h  IKOptimization.cpp  IKOptimization.h  IntegratedWorld.cpp  IntegratedWorld.h  JugglingInfo.cpp  JugglingInfo.h  LLC.cpp  LLC.h  MuscleOptimization.cpp  MuscleOptimization.h  MusculoSkeletalSystem.cpp  MusculoSkeletalSystem.h  Record.cpp  Record.h  main.cpp
vmcon/export/: HLC_Param.txt  motion.txt  muscle_params.xml  param.txt
